--- a/src/malla/templates/components/table_layout_macros.html
+++ b/src/malla/templates/components/table_layout_macros.html
@@ -67,7 +67,7 @@
 <div class="sidebar-section">
     <h6><i class="bi bi-collection"></i> Grouping</h6>
     <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="{{ checkbox_id }}" checked>
+        <input class="form-check-input" type="checkbox" id="{{ checkbox_id }}" name="{{ checkbox_id }}" checked>
         <label class="form-check-label" for="{{ checkbox_id }}">
             {{ label }}
         </label>
