--- a/src/malla/templates/base.html
+++ b/src/malla/templates/base.html
@@ -105,7 +105,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="z-index: 1040;">
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('main.dashboard') }}">
                 <i class="bi bi-radio"></i> {{ APP_NAME }}
